--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^4.13.1",
+    "firebase-tools": "^3.18.4",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-responsive-carousel": "^3.1.37",
@@ -12,6 +14,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && firebase deploy"
   }
 }
